kubernetes/vikunja/vikunja.kube.complete.yml
####################
### FRONT
####################
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front  
    spec:
      containers:
        - name : front
          image: localhost:32000/front:v2
---
apiVersion: v1
kind: Service
metadata :
  name : front
spec:
  selector:
    app: front
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front
            port:
              number: 8080
####################
### API
####################
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - image: localhost:32000/api:v2
        name: api
---
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  ports:
  - port: 3456
    protocol: TCP
    targetPort: 3456
  selector:
    app: api
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 3456
####################
### MYSQLDB
####################
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql #mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql  
    spec:
      containers:
        - name : mysql
          image: mysql
          volumeMounts:
          - mountPath: /var/lib/mysql
            name: mysql
      volumes:
        - name: mysql
          persistentVolumeClaim:
            claimName: mysql                        
---
apiVersion: v1
kind: Service
metadata :
  name : mysql
spec:
  selector:
    app: mysql
  ports:
    - port: 3306
      protocol: TCP
      targetPort: 3306
---
####################
### Shared
####################
